--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.0-alpha04'
+        compose_version = '1.0.0-alpha05'
     }
     ext.kotlin_version = "1.4.10"
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -20,6 +21,8 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
         jcenter()
     }
 }
