--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
 
 spotless {
 	// optional: limit format enforcement to just the files changed by this feature branch
-	ratchetFrom 'origin/master'
+	ratchetFrom 'origin/main'
 
 	format 'misc', {
 		// define the files to apply `misc` to
