--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,5 +17,13 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Build with Gradle
+    - name: Build
       run: ./gradlew build
+    - name: Assemble Debug
+      run: ./gradlew assembleDebug
+    - name: Upload Debug APK
+      uses: action/upload-artifact@2.2.0
+      with:
+        name: Debug APK
+        path: app/build/outputs/apk/debug/app-debug.apk 
+      
