--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Assemble Debug
       run: ./gradlew assembleDebug
     - name: Upload Debug APK
-      uses: action/upload-artifact@2.2.0
+      uses: actions/upload-artifact@2
       with:
         name: Debug APK
         path: app/build/outputs/apk/debug/app-debug.apk 
