--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,24 +43,15 @@ android {
 
 spotless {
 	format 'misc', {
-		// define the files to apply `misc` to
-		target '*.gradle', '*.md', '.gitignore'
+		target '*.md', '.gitignore'
 
-		// define the steps to apply to those files
 		trimTrailingWhitespace()
-		indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
+		indentWithSpaces()
 		endWithNewline()
-	}
-	java {
-		googleJavaFormat('1.8').aosp()
-		// make sure every file has the following copyright header.
-		// optionally, Spotless can set copyright years by digging
-		// through git history (see "license" section below)
-		licenseHeader '/* (C)$YEAR */'
 	}
 	kotlin {
 		// by default the target is every '.kt' and '.kts` file in the java sourcesets
-		ktlint()   // has its own section below
+		ktlint()
 		licenseHeader '/* (C)$YEAR */' // or licenseHeaderFile
 	}
 	groovyGradle {
