--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,9 @@ android {
 		applicationId "com.louis993546.composecomposer"
 		minSdkVersion 21
 		targetSdkVersion 30
-		versionCode 2
-		versionName "2.0.0"
+		def number = System.getenv("GITHUB_RUN_NUMBER") ?: 1
+		versionCode number.toInteger()
+		versionName "${number}.0.0"
 
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 	}
