--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -1,6 +1,8 @@
 name: Release
 
 on:
+  pull_request:
+    branches: [ main ] # For testing only
   push:
     branches: [ main ]
 
@@ -15,3 +17,11 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Sign Android release
+      uses: r0adkll/sign-android-release@v1
+      with:
+        releaseDirectory: app/build/outputs/apk/release
+        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+        alias: ${{ secrets.ALIAS }}
+        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+        keyPassword: ${{ secrets.KEY_PASSWORD }}
