--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -27,3 +27,7 @@ jobs:
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
         keyPassword: ${{ secrets.KEY_PASSWORD }}
+    - name: actions/upload-artifact@v2
+      with:
+        name: Release AAB
+        path: app/build/outputs/bundle/release/app-release.aab
