--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -27,7 +27,8 @@ jobs:
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
         keyPassword: ${{ secrets.KEY_PASSWORD }}
-    - name: actions/upload-artifact@v2
+    - name: Upload Release AAB
+      uses: actions/upload-artifact@v2
       with:
         name: Release AAB
         path: app/build/outputs/bundle/release/app-release.aab
