--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   pull_request:
-    branches: [ main ] # For testing only
+    branches: [ main ] # TODO for testing only
   push:
     branches: [ main ]
 
@@ -27,8 +27,15 @@ jobs:
         alias: ${{ secrets.ALIAS }}
         keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
         keyPassword: ${{ secrets.KEY_PASSWORD }}
-    - name: Upload Release AAB
+    - name: Upload Release AAB to GitHub
       uses: actions/upload-artifact@v2
       with:
         name: Release AAB
         path: app/build/outputs/bundle/release/app-release.aab
+    - name: Upload Release AAB to Play Store
+      uses: r0adkll/upload-google-play@v1
+      with:
+        serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
+        packageName: com.louis993546.composecomposer
+        releaseFile: app/build/outputs/bundle/release/app-release.aab
+        track: beta
