--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Upload Release AAB to Play Store
       uses: r0adkll/upload-google-play@v1
       with:
-        serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
+        serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
         packageName: com.louis993546.composecomposer
         releaseFile: app/build/outputs/bundle/release/app-release.aab
         track: beta
