--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id "com.diffplug.spotless" version "5.12.5"
 }
 
 android {
@@ -11,8 +12,9 @@ android {
         applicationId "com.louis993546.composecomposer"
         minSdk 21
         targetSdk 30
-        versionCode 1
-        versionName "1.0"
+        def number = System.getenv("GITHUB_RUN_NUMBER") ?: 1
+        versionCode number.toInteger()
+        versionName "${number}.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -22,7 +24,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -39,7 +41,13 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.4.32'
+    }
+}
+
+spotless {
+    kotlin {
+        ktlint()
+        licenseHeader '/* (C)$YEAR */'
     }
 }
 
@@ -53,7 +61,8 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
-    testImplementation 'junit:junit:4.+'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
