--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id "org.jetbrains.kotlin.kapt"
     id "com.diffplug.spotless" version "5.12.5"
 }
 
@@ -52,7 +53,6 @@ spotless {
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -63,6 +63,10 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
     implementation 'com.jakewharton.timber:timber:4.7.1'
     implementation "com.google.accompanist:accompanist-glide:0.10.0"
+    implementation "com.squareup.moshi:moshi:1.12.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
+    kapt "dev.zacsweers.moshix:moshi-sealed-codegen:0.11.0"
+    implementation "dev.zacsweers.moshix:moshi-sealed-runtime:0.11.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
