Switched from ktlint to ktfmt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,8 @@ android {
 
 spotless {
     kotlin {
-        ktlint()
+        target '**/*.kt'
+        ktfmt()
         licenseHeader '/* (C)$YEAR */'
     }
 }
