--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -59,7 +59,7 @@ jobs:
         uses: github/codeql-action/upload-sarif@v1
         if: ${{ always() }}
         with:
-          sarif_file: build/detekt.sarif
+          sarif_file: build/reports/detekt/detekt.sarif
   unit-tests:
     runs-on: ubuntu-latest
     steps:
