--- a/build.gradle
+++ b/build.gradle
@@ -35,10 +35,7 @@ detekt {
     reports {
         html.enabled = true
         xml.enabled = true
-        sarif {
-            enabled = true
-            destination = file("build/reports/detekt.sarif")
-        }
+        sarif.enabled = true
     }
 }
 
