--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id "org.jetbrains.kotlin.kapt"
+    id 'com.squareup.sqldelight'
 }
 
 android {
@@ -64,6 +65,7 @@ dependencies {
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
     kapt "dev.zacsweers.moshix:moshi-sealed-codegen:0.11.0"
     implementation "dev.zacsweers.moshix:moshi-sealed-runtime:0.11.0"
+    implementation "com.squareup.sqldelight:android-driver:$sqldelight_version"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
