--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,6 @@ android.enableJetifier=false
 kotlin.code.style=official
 
 runBuildScan=false
+
+# TODO blocked by https://github.com/JakeWharton/timber/issues/408
+android.enableParallelLint=false
