--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
+    id "com.android.application"
+    id "kotlin-android"
     id "org.jetbrains.kotlin.kapt"
-    id 'com.squareup.sqldelight'
+    id "com.squareup.sqldelight"
+    id "com.google.protobuf" version "0.8.12"
 }
 
 android {
@@ -18,15 +19,13 @@ android {
         versionName "${number}.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        vectorDrawables.useSupportLibrary true
     }
 
     buildTypes {
         release {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
     compileOptions {
@@ -34,40 +33,66 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = "1.8"
         useIR = true
-        freeCompilerArgs = ['-Xinline-classes']
+        freeCompilerArgs = ["-Xinline-classes"]
     }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-    }
+    buildFeatures.compose = true
+    composeOptions.kotlinCompilerExtensionVersion compose_version
     lintOptions {
         htmlReport true
         sarifReport true
     }
 }
 
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.10.0"
+    }
+
+    // Generates the java Protobuf-lite code for the Protobufs in this project. See
+    // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
+    // for more information.
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                java {
+                    option 'lite'
+                }
+            }
+        }
+    }
+}
+
+
 dependencies {
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
+    implementation "androidx.core:core-ktx:1.5.0"
+    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "com.google.android.material:material:1.3.0"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha08'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+    implementation "androidx.activity:activity-compose:1.3.0-alpha08"
+
+    //region data store
+    implementation "com.google.protobuf:protobuf-javalite:3.10.0"
+    implementation "androidx.datastore:datastore:1.0.0-beta01"
+    //endregion
+
+    implementation "com.jakewharton.timber:timber:4.7.1"
     implementation "com.google.accompanist:accompanist-glide:0.10.0"
+
+    //region moshi
     implementation "com.squareup.moshi:moshi:1.12.0"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
     kapt "dev.zacsweers.moshix:moshi-sealed-codegen:0.11.0"
     implementation "dev.zacsweers.moshix:moshi-sealed-runtime:0.11.0"
+    //endregion
+
     implementation "com.squareup.sqldelight:android-driver:$sqldelight_version"
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 }
