--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.0-beta07'
-        sqldelight_version = '1.5.0'
+        compose_version = "1.0.0-beta07"
+        sqldelight_version = "1.5.0"
     }
     repositories {
         google()
         mavenCentral()
         gradlePluginPortal()
-        maven { url 'https://www.jetbrains.com/intellij-repository/releases' }
+        maven { url "https://www.jetbrains.com/intellij-repository/releases" }
         maven { url "https://jetbrains.bintray.com/intellij-third-party-dependencies" }
     }
     dependencies {
