--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-    implementation "androidx.activity:activity-compose:1.3.0-alpha08"
+    implementation "androidx.activity:activity-compose:1.3.0-beta01"
 
     //region data store
     implementation "com.google.protobuf:protobuf-javalite:3.10.0"
@@ -87,7 +87,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi:1.12.0"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
     kapt "dev.zacsweers.moshix:moshi-sealed-codegen:0.11.2"
-    implementation "dev.zacsweers.moshix:moshi-sealed-runtime:0.11.0"
+    implementation "dev.zacsweers.moshix:moshi-sealed-runtime:0.11.2"
     //endregion
 
     implementation "com.squareup.sqldelight:android-driver:$sqldelight_version"
