--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         compose_version = "1.0.0-beta08"
         sqldelight_version = "1.5.0"
+        protobuf_version = "3.17.2"
     }
     repositories {
         google()
