--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,6 @@ protobuf {
     }
 }
 
-
 dependencies {
     implementation "androidx.core:core-ktx:1.5.0"
     implementation "androidx.appcompat:appcompat:1.3.0"
@@ -92,9 +91,6 @@ dependencies {
     implementation "androidx.datastore:datastore:1.0.0-beta01"
     //endregion
 
-    implementation "com.jakewharton.timber:timber:4.7.1"
-    implementation "com.google.accompanist:accompanist-glide:0.11.1"
-
     //region moshi
     implementation "com.squareup.moshi:moshi:1.12.0"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
@@ -102,7 +98,16 @@ dependencies {
     implementation "dev.zacsweers.moshix:moshi-sealed-runtime:0.11.2"
     //endregion
 
+    //region Accompanist
+    implementation "com.google.accompanist:accompanist-glide:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    //endregion
+
     implementation "com.squareup.sqldelight:android-driver:$sqldelight_version"
+    implementation "com.jakewharton.timber:timber:4.7.1"
+
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.2"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
