--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         compose_version = "1.0.0-beta08"
         sqldelight_version = "1.5.0"
         protobuf_version = "3.17.2"
+        accompanist_version = "0.11.1"
     }
     repositories {
         google()
@@ -46,4 +47,14 @@ tasks.detekt.jvmTarget = "1.8"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+    kotlinOptions {
+        // Treat all Kotlin warnings as errors
+        allWarningsAsErrors = true
+
+        // for Color moshi adapter (ULong)
+        freeCompilerArgs += "-Xopt-in=kotlin.ExperimentalStdlibApi"
+    }
 }
