A basic finder screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,9 +106,11 @@ dependencies {
     implementation "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
     //endregion
 
     implementation "com.squareup.sqldelight:android-driver:$sqldelight_version"
+    implementation "com.squareup.sqldelight:coroutines-extensions:$sqldelight_version"
     implementation "com.jakewharton.timber:timber:4.7.1"
 
     testImplementation "junit:junit:4.13.2"
