--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,8 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary true
+
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -33,6 +35,8 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
+
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -107,6 +111,11 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
+    //endregion
+
+    //region kotlinx datetime
+    implementation "org.jetbrains.kotlinx:kotlinx-datetime:0.2.1"
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
     //endregion
 
     implementation "com.squareup.sqldelight:android-driver:$sqldelight_version"
