--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = "1.0.0-beta09"
+        compose_version = "1.0.0-rc01"
         sqldelight_version = "1.5.0"
         protobuf_version = "3.17.3"
-        accompanist_version = "0.12.0"
+        accompanist_version = "0.13.0"
     }
     repositories {
         google()
