--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ android {
 
     signingConfigs {
         debug {
-            storeFile rootProject.file('debug.keystore')
+            storeFile rootProject.file("debug.keystore")
         }
     }
 }
@@ -77,7 +77,7 @@ protobuf {
         all().each { task ->
             task.builtins {
                 java {
-                    option 'lite'
+                    option "lite"
                 }
             }
         }
@@ -85,26 +85,26 @@ protobuf {
 }
 
 dependencies {
-    implementation "androidx.core:core-ktx:1.5.0"
-    implementation "androidx.appcompat:appcompat:1.3.0"
-    implementation "com.google.android.material:material:1.3.0"
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "com.google.android.material:material:1.4.0"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-    implementation "androidx.activity:activity-compose:1.3.0-beta01"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha02"
+    implementation "androidx.activity:activity-compose:1.3.0"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha05"
 
     //region data store
     implementation "com.google.protobuf:protobuf-javalite:$protobuf_version"
-    implementation "androidx.datastore:datastore:1.0.0-beta01"
+    implementation "androidx.datastore:datastore:1.0.0-rc02"
     //endregion
 
     //region moshi
     implementation "com.squareup.moshi:moshi:1.12.0"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.12.0"
-    kapt "dev.zacsweers.moshix:moshi-sealed-codegen:0.11.2"
-    implementation "dev.zacsweers.moshix:moshi-sealed-runtime:0.11.2"
+    kapt "dev.zacsweers.moshix:moshi-sealed-codegen:0.12.0"
+    implementation "dev.zacsweers.moshix:moshi-sealed-runtime:0.12.0"
     //endregion
 
     //region Accompanist
@@ -125,7 +125,7 @@ dependencies {
     implementation "com.jakewharton.timber:timber:4.7.1"
 
     testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.2"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
 }
