--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = "1.0.0-rc01"
-        sqldelight_version = "1.5.0"
+        compose_version = "1.0.0"
+        sqldelight_version = "1.5.1"
         protobuf_version = "3.17.3"
-        accompanist_version = "0.13.0"
+        accompanist_version = "0.15.0"
     }
     repositories {
         google()
@@ -17,7 +17,7 @@ buildscript {
         classpath "app.cash.exhaustive:exhaustive-gradle:0.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
         classpath "com.squareup.sqldelight:gradle-plugin:$sqldelight_version"
-        classpath "com.android.tools.build:gradle:7.1.0-alpha03"
+        classpath "com.android.tools.build:gradle:7.0.0"
     }
 }
 
